WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124372
[Mac] HMAC sign/verify crashes when key is empty
https://bugs.webkit.org/show_bug.cgi?id=124372
Summary
[Mac] HMAC sign/verify crashes when key is empty
Alexey Proskuryakov
Reported
2013-11-14 11:41:05 PST
Even when key length is 0, CommonCrypto still requires a non-null key data pointer.
Attachments
proposed fix
(5.56 KB, patch)
2013-11-14 11:45 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-11-14 11:45:49 PST
Created
attachment 216965
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-11-14 11:54:36 PST
Committed <
http://trac.webkit.org/r159299
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug