[Mac] HMAC sign/verify crashes when key is empty https://bugs.webkit.org/show_bug.cgi?id=124372

Reviewed by Sam Weinig.

Source/WebCore:

Test: crypto/subtle/hmac-sign-verify-empty-key.html

* crypto/mac/CryptoAlgorithmHMACMac.cpp: (WebCore::calculateSignature): Give it
a non-null pointer then.

LayoutTests:

* crypto/subtle/hmac-sign-verify-empty-key-expected.txt: Added.
* crypto/subtle/hmac-sign-verify-empty-key.html: Added.



Canonical link: https://commits.webkit.org/142569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159299 268f45cc-cd09-0410-ab3c-d52691b4dbfc